[package]
name = "rwallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bdk = { version = "0.15.0", default-feature = false, features = ["compiler", "all-keys", "key-value-db", "rpc", "compact_filters"] }
dirs-next = "2.0"
futures = "0.3.19"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = "1.0"
directories-next = "2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }
wasm-timer = "0.2"